<resources>
    <string name="app_name">Meu Semestre</string>
    <!-- Default-->
    <string name="back">Voltar</string>
    <string name="current_discipline">atual</string>

    <!--  Activity/Home  -->
    <string name="home_dashboard">Semestre ativo</string>
    <string name="home_disciplines">Disciplinas</string>
    <string name="home_tips">Dicas</string>

    <!--  Activity/Welcome  -->
    <string name="welcome_button_explore">Começar a explorar</string>
    <string name="welcome_button_login">Já tenho uma conta</string>

    <!--  Activity/Profile  -->
    <string name="profile_guest_name">Convidado</string>
    <string name="profile_empty_value">-</string>
    <string name="profile_cr_title">CR geral</string>
    <string name="profile_semester_title">Semestre</string>
    <string name="profile_disciplines_title">Disciplinas</string>
    <string name="profile_notification_title">Receber notificações</string>
    <string name="profile_logout_title">Sair da minha conta</string>
    <string name="profile_version_title">Versão %s</string>

    <!--  Activity/Register  -->
    <string name="register_button_proceed">Prosseguir</string>

    <!--  Activity/Discipline Registration  -->
    <string name="discipline_registration_name">Dê um nome para a disciplina</string>
    <string name="discipline_registration_name_hint">Nome da disciplina</string>
    <string name="discipline_registration_knowledge_area">Selecione a área de conhecimento em que a disciplina melhor se encaixa</string>
    <string name="discipline_registration_knowledge_area_hint">Área de conhecimento</string>
    <string name="discipline_registration_exams_quantity">Quantas avaliações você vai ter nesta disciplina?</string>
    <string name="discipline_registration_exams_quantity_hint">Quantidade de avaliações</string>
    <string name="discipline_registration_button">Concluir</string>

    <!--  Activity/Exam Registration  -->
    <string name="exam_registration_cycles">A qual ciclo de avaliação essa atividade pertence?</string>
    <string name="exam_registration_cycles_hint">Ciclo</string>
    <string name="exam_registration_cycles_value">%dº Ciclo</string>
    <string name="exam_registration_name">Dê um nome para a atividade</string>
    <string name="exam_registration_name_hint">Nome da atividade</string>
    <string name="exam_registration_value">Quanto esta atividade vale?</string>
    <string name="exam_registration_value_hint">Valor</string>
    <string name="exam_registration_grade">Quanto você tirou?</string>
    <string name="exam_registration_grade_hint">Nota</string>
    <string name="exam_registration_button">Concluir</string>
    <string name="exam_registration_menu_delete">Deletar atividade</string>

    <!--  Fragment/Disciplines  -->
    <string-array name="disciplines_tab_item">
        <item>Semestre ativo</item>
        <item>Histórico</item>
    </string-array>

    <!--  Fragment/Discipline Detail  -->
    <string name="discipline_detail_menu_delete">Deletar Atividade</string>
    <string name="discipline_detail_fab">Atividade</string>

    <!--  Fragment/Register Institution  -->
    <string name="register_institution_title">Em qual tipo de instituição você estuda?</string>
    <string name="register_institution_public">Pública</string>
    <string name="register_institution_private">Privada</string>
    <string name="register_institution_public_tag">public</string>
    <string name="register_institution_private_tag">private</string>

    <!--  Fragment/Register Exams  -->
    <string name="register_exams_title">Seu semestre é dividido em quantos ciclos de avaliação?</string>
    <string name="register_exams_description">Exemplo: período de AV1, período de AV2...</string>
    <string name="register_exams_1">1</string>
    <string name="register_exams_2">2</string>
    <string name="register_exams_3">3</string>
    <string name="register_exams_other">Variável</string>

    <!--  Fragment/Register Average  -->
    <string name="register_average_title">Qual é a média para aprovação na instituição que você estuda?</string>
    <string name="register_average_5">5</string>
    <string name="register_average_6">6</string>
    <string name="register_average_7">7</string>
    <string name="register_average_8">8</string>
    <string name="register_average_9">9</string>

    <!--  Fragment/Dashboard  -->
    <string name="dashboard_cr">CR %.1f</string>

    <!--  Fragment/Welcome Info  -->
    <string name="welcome_info_first_title">Olá!</string>
    <string name="welcome_info_first_description">O Meu Semestre te ajuda a manter a organização e
        saber no que precisa focar para garantir sua aprovação.</string>

    <string name="welcome_info_second_title">Notas em dia</string>
    <string name="welcome_info_second_description">Registre as notas que você tira ao longo do
        semestre para acompanhar seu desempenho.</string>

    <string name="welcome_info_third_title">De olho no desempenho</string>
    <string name="welcome_info_third_description">Fique sabendo em quais disciplinas você precisa
        focar mais e em quais você está mandando bem.</string>

    <string name="welcome_info_fourth_title">Guarde o histórico</string>
    <string name="welcome_info_fourth_description">Todos os semestres registrados no aplicativo
        ficam disponíveis para consulta e download.</string>

    <!--  VH/Active Semester  -->
    <string name="active_semester_delete">Deletar Disciplina</string>
    <string name="active_semester_fab">Disciplinas</string>

    <!--  VH/Exam  -->
    <string name="exam_edit">Editar Avaliação</string>

    <!--  VH/Best Discipline  -->
    <string name="best_discipline_title">Sua melhor disciplina é</string>

    <!--  VH/Restricted Discipline  -->
    <string name="restricted_discipline_title">Disciplinas que precisam de atenção</string>
    <string name="restricted_discipline_grades_registered">%d notas registradas</string>

    <!--  VH/Register Grades  -->
    <string name="register_grades_title">Cadastre suas notas!</string>
    <string name="register_grades_action">Cadastrar notas</string>
    <string name="register_grades_description">Você tem disciplinas sem notas. Mantendo suas notas
        atualizadas, fica mais fácil saber onde você precisa melhorar, e onde está mandando bem!
    </string>

    <!--  VH/Finish Semester  -->
    <string name="finish_semester_action">Encerrar semestre</string>

    <!--  VH/Grade Highlight  -->
    <string name="grade_highlight_title">Onde melhorou, onde piorou</string>

    <!--  VH/Empty Semester  -->
    <string name="empty_semester_title">Nenhum semestre ativo</string>
    <string name="empty_semester_description">Inicie um semestre e inclua as disciplinas que você está cursando.</string>
    <string name="empty_semester_action">Iniciar um semestre</string>

    <!--  VH/Empty History  -->
    <string name="empty_history_title">Nenhum histórico de semestres</string>
    <string name="empty_history_description">Você ainda não teve semestres anteriores</string>

    <!--  VH/Empty Activities  -->
    <string name="empty_exams_title">Nenhuma atividade cadastrada</string>
    <string name="empty_exams_description">Cadastre suas atividades da disciplina e comece a acompanhar seu desempenho.</string>
    <string name="empty_exams_action">Cadastrar atividades</string>

    <!--  VH/Empty Disciplines  -->
    <string name="empty_disciplines_title">Nenhuma disciplina cadastrada</string>
    <string name="empty_disciplines_description">Cadastre suas disciplinas e fique de olho no seu desempenho.</string>
    <string name="empty_disciplines_action">Cadastrar disciplinas</string>

    <!--  VH/Grade Comparison Chart  -->
    <string name="grade_comparison_chart_title">Comparativo das avaliações</string>
    <string name="grade_comparison_chart_first_cycle">Avaliação 1</string>
    <string name="grade_comparison_chart_second_cycle">Avaliação 2</string>
    <string name="grade_comparison_chart_third_cycle">Avaliação 3</string>


    <!--  VH/Exams By Cycles  -->
    <string name="exams_by_cycles_title">%dº ciclo de avaliação</string>

    <!--  View/Circle Chart  -->
    <string name="circle_chart_title">Média</string>

    <!--  View/Average Indicator  -->
    <string name="average_indicator_title">Média &lt;b>%s&lt;/b></string>
    <string name="average_indicator_empty_average">Sem notas</string>
    <string name="average_content_description_valid">A disciplina %1$s está com média %2$s.</string>
    <string name="average_content_description_invalid">A disciplina %1$s está sem nota</string>

    <!--  View/Bottom Navigation  -->
    <string name="bottom_navigation_dashboard">Semestre</string>
    <string name="bottom_navigation_disciplines">Disciplinas</string>
    <string name="bottom_navigation_tips">Dicas</string>

    <!--  BottomSheet/Login  -->
    <string name="login_title">Login</string>
    <string name="login_description">Faça login para ter acesso às informações da sua conta.</string>
    <string name="login_button_google">Google</string>
    <string name="login_button_facebook">Facebook</string>

    <!--  BottomSheet/Semester Registration  -->
    <string name="semester_registration_title">Dê um nome para o semestre</string>
    <string name="semester_registration_hint">Nome do semestre</string>
    <string name="semester_registration_action">Criar</string>

    <!--  Dialog/Confirm Removal  -->
    <string name="confirm_removal_action">Excluir</string>
    <string name="confirm_removal_action_cancel">Cancelar</string>

    <!--  Dialog/Confirm Removal Discipline -->
    <string name="confirm_removal_discipline_text">Deseja excluir esta disciplina?</string>

    <!--  Dialog/Confirm Removal Exam -->
    <string name="confirm_removal_exam_text">Deseja excluir esta atividade?</string>
</resources>