<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:background="@color/light_purple">

        <TextView
            android:id="@+id/register_institution_text_view_title"
            style="@style/Register.TextView.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_institution_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_institution_button_public"
            style="@style/Register.Button.Option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_institution_public" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_institution_button_private"
            style="@style/Register.Button.Option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_institution_private" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>